# yticxelf

./: .dockerignore  .env.dist  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  data.py  dummy_data.py  main.py  pyproject.toml  requirements.txt  test_main.http
core/: config.py
data/: db.py  load_sample_assets.py  sample_assets.json  sample_assets_100.json  sample_assets_1000.json  sample_assets_10000.json
models/: __init__.py  activation.py  activation_asset_history.py  asset.py
schemas/: activation.py  asset.py
services/: _algorithms.py  asset_selection.py
tests/: _helpers.py  dummy_data.py  speed_test.py  test_main.py
tests/models/: base.py  test_activation.py  test_activation_asset_history.py  test_asset.py
tests/services/: test_algorithms.py  test_asset_selection.py
