[project]
name = "flexcity"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.0",
    "pydantic>=2.13.1",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "coverage>=7.13.5",
    "httpx>=0.28.1",
    "mypy>=1.20.1",
    "pre-commit>=4.5.1",
    "ruff>=0.15.10",
]

# == COVERAGE ==

[tool.coverage.run]
branch = true

# == MYPY ==

[tool.mypy]
strict = true

# == RUFF ==

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100",
    "D104",
    "D203",
    "D212",
    "COM812",
    "PT009",
    "PT027",
    "TC001",
    "TC003",
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
docstring-code-format = true
